--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,16 @@
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.dylib
+
+# C extensions
+*.so
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
-
-# C extensions
-*.so
 
 # Distribution / packaging
 .Python
@@ -84,46 +90,81 @@ ipython_config.py
 # pyenv
 .python-version
 
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
+# Test binary, built with `go test -c`
+*.test
 
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow
-__pypackages__/
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
 
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
+# Compiled class file
+*.class
 
-# SageMath parsed files
-*.sage.py
+# Log file
+*.log
 
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
+# BlueJ files
+*.ctxt
 
-# Spyder project settings
-.spyderproject
-.spyproject
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
 
-# Rope project settings
-.ropeproject
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
 
-# mkdocs documentation
-/site
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
 
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
 
-# Pyre type checker
-.pyre/
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+build/
+!**/src/main/**/build/
+!**/src/test/**/build/
+
+### VS Code ###
+.vscode/
+
+# Mac
+.DS_Store
+.AppleDouble
+.LSOverride
+.AppleDB
+.AppleDesktop
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+Network Trash Folder
+Temporary Items
+.apdisk
+
+# Windows
+Thumbs.db
+
+# Node
+npm-debug.log
