update kecycloak configuration

--- a/kc-docker/.env
+++ b/kc-docker/.env
@@ -25,3 +25,4 @@ KC_HTTPS_KEY_STORE_PASSWORD=passw0rd
 # NGINX SETTING
 NGINX_VOLUME_CONF=./conf.d/
 NGINX_VOLUME_TLS=./tls/
+NGINX_VOLUME_WEB=./web/
