--- a/kc-docker/docker-compose.yml
+++ b/kc-docker/docker-compose.yml
@@ -72,6 +72,7 @@ services:
       - ${NGINX_VOLUME_CONF}nginx.conf:/etc/nginx/nginx.conf:rw
       - ${NGINX_VOLUME_CONF}:/usr/local/conf.d:rw
       - ${NGINX_VOLUME_TLS}:/usr/local/tls:rw
+      - ${NGINX_VOLUME_WEB}:/usr/share/nginx/html:rw
     restart: on-failure
     depends_on:
       - keycloak
