--- a/kc-docker/docker-compose.yml
+++ b/kc-docker/docker-compose.yml
@@ -24,9 +24,9 @@ services:
     environment:
       POSTGRES_DB: ${KC_DB_NAME}
       POSTGRES_USER: ${KC_DB_USERNAME}      
-      POSTGRES_PASSWORD: ${KC_DB_PASSWORD}
+      POSTGRES_PASSWORD: ${KC_DB_PASSWORD:-p4ssw0rd}
     ports:
-      - $POSTGRES_PORT:5432
+      - "${POSTGRES_PORT:-5432}:5432"
 
   #######################################
   # Keycloak: The IAM
